# pykeycloak-realm

./: .env  .env.kc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: workflow.yml
data/realms/templates/: otago.realm.yml
src/pykeycloak_realm/: builder.py  builders.py  config.py  realm.py
tests/pykeycloak_realm/: builder_test.py  config_test.py  realm_test.py
